--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.servlet.context-path=/example
 server.port=8080
+management.endpoints.web.exposure.include=*
+management.endpoint.health.probes.enabled=true
